adding and fixing tests